# cpp-project-example

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.jml
include/: example.hpp
src/: example.cpp
test/: example_test.cpp
